; ModuleID = '/home/carl/AnghaBench/memcached/extr_slabs.c_do_slabs_adjust_mem_limit.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_slabs.c_do_slabs_adjust_mem_limit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@mem_base = common dso_local global i32* null, align 8
@settings = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@mem_limit = common dso_local global i64 0, align 8
@mem_limit_reached = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @do_slabs_adjust_mem_limit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_slabs_adjust_mem_limit(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i32*, i32** @mem_base, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %11

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  store i64 %8, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @settings, i32 0, i32 0), align 8
  %9 = load i64, i64* %3, align 8
  store i64 %9, i64* @mem_limit, align 8
  store i32 0, i32* @mem_limit_reached, align 4
  %10 = call i32 (...) @memory_release()
  store i32 1, i32* %2, align 4
  br label %11

11:                                               ; preds = %7, %6
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @memory_release(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
